# newsletter

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  watch_files.sh
.cargo/: audit.toml  config.toml
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml
scripts/: docker_build_newsletter.sh  init_db.sh  push.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
