[package]
edition = "2021"
name = "newsletter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.15"
config = "0.11"
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1", features = ["log"]}
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
uuid = {version = "0.8.1", features = ["v4"]}

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
version = "0.5.7"
